--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     </a></div>
     <div class="footer"><a name="contact">
         <div class="card">
-            <div >
+            <div class="tnc">
         <a href="" class="terms"  target="_blank">Safety Standards</a><br>
         <a href="" class="terms" target="_blank">Terms and Conditions</a><br>
         <a href="" class="terms" target="_blank">Privacy policy</a>
@@ -113,8 +113,6 @@
                 <i class="fa fa-3x fa-youtube"></i></a>
             <a class="media" href="" target="_blank">
                 <i class="fa fa-3x fa-facebook"></i></a>
-            <a class="media" href="" target="_blank">
-                <i class="fa fa-3x fa-linkedin"></i></a>
             <a class="media" href="" target="_blank">
                  <i class="fa fa-3x fa-instagram"></i></a>  
         </div>
